--- a/trunk/tasma/user-manager/po/it.po
+++ b/trunk/tasma/user-manager/po/it.po
@@ -1,119 +1,120 @@
-# SOME DESCRIPTIVE TITLE.
+# translation of it.po to Italian
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
+# Andrea Decorte <adecorte@gmail.com>, 2007.
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-12-12 13:28+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2007-03-16 21:10+0200\n"
+"Last-Translator: Andrea Decorte <adecorte@gmail.com>\n"
+"Language-Team: Italian <pardus-translation-it@pardus.org.tr>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.11.4\n"
+"Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
 #: mainview.py:30 mainview.py:66
 msgid ""
 "Cannot connect to the COMAR! If it is not running you should start it with "
 "the 'service comar start' command in a root console."
-msgstr ""
+msgstr "Impossibile collegarsi a COMAR! Se non è in esecuzione, dovresti avviarlo digitando in una console di root 'service comar start'."
 
 #: mainview.py:46
 msgid "Waiting COMAR..."
-msgstr ""
+msgstr "In attesa di COMAR..."
 
 #: mainview.py:47
 msgid "Connection to the COMAR unexpectedly closed, trying to reconnect..."
-msgstr ""
+msgstr "Connessione a COMAR chiusa inaspettatamente, tentativo di riconnessione in corso..."
 
 #: user-manager.py:30
 msgid "User Management"
-msgstr ""
+msgstr "Amministrazione degli utenti"
 
 #: user-manager.py:76
 msgid "User manager module is already started!"
-msgstr ""
+msgstr "Il modulo di amministrazione degli utenti è già in esecuzione!"
 
 #: user-manager.py:81
 msgid "User Manager"
-msgstr ""
+msgstr "Amministratore degli utenti"
 
 #: groupedit.py:22 useredit.py:25
 msgid "ID:"
-msgstr ""
+msgstr "ID:"
 
 #: groupedit.py:30 useredit.py:37
 msgid "Select manually"
-msgstr ""
+msgstr "Scegli manualmente"
 
 #: groupedit.py:61
 msgid "Group name:"
-msgstr ""
+msgstr "Nome del gruppo:"
 
 #: groupedit.py:97
 msgid "Enter a group ID or use auto selection"
-msgstr ""
+msgstr "Inserici un ID per il gruppo o utilizza la selezione automatica"
 
 #: groupedit.py:100
 msgid "Enter a group name"
-msgstr ""
+msgstr "Inserisci il nome di un gruppo"
 
 #: groupedit.py:127
 msgid "Enter Information For New Group"
-msgstr ""
+msgstr "Inserisci le informazioni per il nuovo gruppo"
 
 #: groupedit.py:175
 msgid "Adding group..."
-msgstr ""
+msgstr "Aggiunta del gruppo in corso..."
 
 #: groupedit.py:185 useredit.py:554 useredit.py:586
 #, python-format
 msgid "Operation failed, reason:<br>%s"
-msgstr ""
+msgstr "Operazione fallita, causa:<br>%s"
 
 #: groupedit.py:187 useredit.py:556 useredit.py:588
 msgid "You are not allowed to do that"
-msgstr ""
+msgstr "Non hai i permessi necessari ad eseguire questa operazione"
 
 #: groupedit.py:189 useredit.py:558 useredit.py:590
 msgid "Comar script error :("
-msgstr ""
+msgstr "Errore di script di COMAR :("
 
 #: browser.py:94
 msgid "Show system user and groups"
-msgstr ""
+msgstr "Mostra gli utenti e i gruppi di sistema"
 
 #: browser.py:104 browser.py:114
 msgid "ID"
-msgstr ""
+msgstr "ID"
 
 #: browser.py:106
 msgid "User name"
-msgstr ""
+msgstr "Nome utente"
 
 #: browser.py:107
 msgid "Full name"
-msgstr ""
+msgstr "Nome completo"
 
 #: browser.py:116
 msgid "Group name"
-msgstr ""
+msgstr "Nome del gruppo"
 
 #: browser.py:121
 msgid "Users"
-msgstr ""
+msgstr "Utenti"
 
 #: browser.py:122
 msgid "Groups"
-msgstr ""
+msgstr "Gruppi"
 
 #: browser.py:131
 msgid "User Manager Help"
-msgstr ""
+msgstr "Aiuto sull'amministrazione degli utenti"
 
 #: browser.py:138
 #, python-format
@@ -121,147 +122,149 @@ msgid ""
 "<big><b>Should I delete this user?</b></big><br><br>Name: %s<br>User name: %"
 "s<br>ID: %d"
 msgstr ""
+"<big><b>Desideri veramente eliminare questo utente?</b></big><br><br>Name: %s<br>Nome utente: %"
+"s<br>ID: %d"
 
 #: browser.py:144
 msgid "Delete User"
-msgstr ""
+msgstr "Eliminazione utente"
 
 #: browser.py:145
 msgid "Delete user and files"
-msgstr ""
+msgstr "Elimina utente e i suoi file"
 
 #: browser.py:146
 msgid "Delete user"
-msgstr ""
+msgstr "Elimina utente"
 
 #: browser.py:157
 #, python-format
-msgid ""
-"<big><b>Should I delete this group?</b></big><br><br>Group name: %s<br>ID: %d"
-msgstr ""
+msgid "<big><b>Should I delete this group?</b></big><br><br>Group name: %s<br>ID: %d"
+msgstr "<big><b>Desideri veramente eliminare questo gruppo?</b></big><br><br>Nome del gruppo: %s<br>ID: %d"
 
 #: browser.py:163 browser.py:164
 msgid "Delete Group"
-msgstr ""
+msgstr "Elimina gruppo"
 
 #: useredit.py:72
 msgid "User name:"
-msgstr ""
+msgstr "Nome utente:"
 
 #: useredit.py:103
 msgid "Full name:"
-msgstr ""
+msgstr "Nome completo:"
 
 #: useredit.py:126
 msgid "Home:"
-msgstr ""
+msgstr "Home:"
 
 #: useredit.py:158
 msgid "Select user's home directory"
-msgstr ""
+msgstr "Scegli la cartella Home dell'utente"
 
 #: useredit.py:167
 msgid "Password:"
-msgstr ""
+msgstr "Password:"
 
 #: useredit.py:173
 msgid "Confirm password:"
-msgstr ""
+msgstr "Conferma password:"
 
 #: useredit.py:202
 msgid "Shell:"
-msgstr ""
+msgstr "Shell:"
 
 #: useredit.py:224
 msgid "Please specify an existing shell command"
-msgstr ""
+msgstr "Specifica per favore un comando shell esistente"
 
 #: useredit.py:226
 msgid "Specified shell command is not executable"
-msgstr ""
+msgstr "Il comando shell specificato non è un eseguibile"
 
 #: useredit.py:268
 msgid "Group"
-msgstr ""
+msgstr "Gruppo"
 
 #: useredit.py:269
 msgid "Permission"
-msgstr ""
+msgstr "Permessi"
 
 #: useredit.py:279
 msgid "Main group:"
-msgstr ""
+msgstr "Gruppo principale:"
 
 #: useredit.py:375
 msgid "Start with typing this user's full name."
-msgstr ""
+msgstr "Inizia digitando il nome completo di questo utente."
 
 #: useredit.py:378
 msgid "You should enter a password for this user."
-msgstr ""
+msgstr "Dovresti inserire una password per questo utente."
 
 #: useredit.py:383
 msgid "Password must be longer."
-msgstr ""
+msgstr "La password deve essere più lunga"
 
 #: useredit.py:387
 msgid "Dont use your full name or user name as a password."
-msgstr ""
+msgstr "Non utilizzare il tuo nome completo o il nome utente come password."
 
 #: useredit.py:390
 msgid "Passwords don't match."
-msgstr ""
+msgstr "Le password non corrispondono."
 
 #: useredit.py:393
 msgid "You must enter a user ID or use the auto selection."
-msgstr ""
+msgstr "Devi inserire un ID utente o utilizzare la selezione automatica."
 
 #: useredit.py:398
 msgid "You must enter a user name."
-msgstr ""
+msgstr "Devi inserire un nome utente."
 
 #: useredit.py:401
 msgid "This user name is used by another user."
-msgstr ""
+msgstr "Questo nome utente è già esistente."
 
 #: useredit.py:405
 msgid "User name must not start with a number."
-msgstr ""
+msgstr "Il nome utente non deve iniziare con un numbero."
 
 #: useredit.py:408
 msgid "You should select at least one group this user belongs to."
-msgstr ""
+msgstr "Dovresti selezionare almeno un gruppo a cui l'utente appartiene."
 
 #: useredit.py:439
 msgid "Edit User's Information"
-msgstr ""
+msgstr "Modifica informazioni sull'utente"
 
 #: useredit.py:441
 msgid "Enter Information For New User"
-msgstr ""
+msgstr "Inserisci le informazioni del nuovo utente"
 
 #: useredit.py:443
 msgid "Show all groups"
-msgstr ""
+msgstr "Mostra tutti i gruppi"
 
 #: useredit.py:533
 msgid ""
 "You are removing yourself from the 'wheel' system group, you might not use "
 "your administrator permissions after that."
-msgstr ""
+msgstr "Ti stai togliendo dal gruppo di sistema 'wheel'; dopo questa operazione non potrai utilizzare i permessi di amministratore."
 
 #: useredit.py:534
 msgid "Important Group Change"
-msgstr ""
+msgstr "Importante cambiamento di gruppo"
 
 #: useredit.py:541
 msgid "Changing user information..."
-msgstr ""
+msgstr "Modifica informazioni utente in corso..."
 
 #: useredit.py:575
 msgid "Adding user..."
-msgstr ""
+msgstr "Aggiunta utente in corso..."
 
 #: useredit.py:615
 msgid "Getting user information..."
-msgstr ""
+msgstr "Recupero informazioni sull'utente in corso..."
+
